test/corpus/comments.txt
================================================================================
Basic comments
================================================================================
<!-- This is a * comment -->
Text outside comment
<!-- Multi-line
     comment that spans
     several lines -->
Text after multi-line comment
--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (comment))
    (paragraph
      (text))
    (paragraph
      (comment))
    (paragraph
      (text))))

================================================================================
Nested comments
================================================================================

<!-- Outer comment <!-- Nested comment --> still in outer comment -->
Text between comments
<!-- Another <!-- complex <!-- nesting --> example --> -->

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (comment)
      (text))
    (paragraph
      (text))
    (paragraph
      (comment)
      (text))))

================================================================================
Comments with special characters
================================================================================
<!-- Comment with * bold * markup -->
<!-- Comment with [[ links ]] -->
<!-- Comment with == headings == -->
<!-- Comment with {| table |} syntax -->
--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (comment))
    (paragraph
      (comment))
    (paragraph
      (comment))
    (paragraph
      (comment))))

================================================================================
Comments within other elements
================================================================================
== Heading <!-- with comment --> ==
* List item <!-- comment in list -->
* Second item

Text paragraph <!-- inline comment --> with comment.

--------------------------------------------------------------------------------

(source_file
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))
    (unordered_list
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)
          (comment)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text))))
    (paragraph
      (text)
      (comment)
      (text))))

================================================================================
Comments at file boundaries
================================================================================
<!-- Comment at the start -->
Text in middle
<!-- Comment at the end -->
--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (comment))
    (paragraph
      (text))
    (paragraph
      (comment))))

================================================================================
Comment-like syntax that isn't a comment
================================================================================

Text with < and > characters
Text with <!-- incomplete comment
Text with <!- not quite a comment ->

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (text))
    (paragraph
      (text)
      (text))))
