test/corpus/headers.txt
==================
Level 1 Header
==================

= [[Heading 1]] =

---

(source_file
  (section)
  (section
    (heading1
      (heading_marker)
      (text)
      (heading_marker))))

==================
Level 2 Header
==================

== Heading 2 ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

==================
Level 3 Header
==================

=== Heading 3 ===

---

(source_file
  (section)
  (section
    (heading3
      (heading_marker)
      (text)
      (heading_marker))))

==================
Level 4 Header
==================

==== Heading 4 ====

---

(source_file
  (section)
  (section
    (heading4
      (heading_marker)
      (text)
      (heading_marker))))

==================
Level 5 Header
==================

===== Heading 5 =====

---

(source_file
  (section)
  (section
    (heading5
      (heading_marker)
      (text)
      (heading_marker))))

==================
Level 6 Header
==================

====== Heading 6 ======

---

(source_file
  (section)
  (section
    (heading6
      (heading_marker)
      (text)
      (heading_marker))))

==================
Header with Bold Text
==================

== '''Bold Header''' ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

==================
Header with Italic Text
==================

== ''Italic Header'' ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

==================
Header with Italic and Bold Text
==================

== '''''Bold and Italic Header''''' ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

==================
Header with Link
==================

== [[Link|Header with Link]] ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

==================
Header with Mixed Formatting
==================

== '''Bold''' and ''Italic'' in Header ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

==================
Multiple Headers
==================

= Header 1 =
== Header 2 ==
=== Header 3 ===

---

(source_file
  (section)
  (section
    (heading1
      (heading_marker)
      (text)
      (heading_marker))
    (section
      (heading2
        (heading_marker)
        (text)
        (heading_marker))
      (section
        (heading3
          (heading_marker)
          (text)
          (heading_marker))))))

==================
Header with Extra Spaces
==================

==  Header with spaces  ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

==================
Unbalanced Headers (Not Valid in MediaWiki)
==================

== Unbalanced Header ===

---

(source_file
  (section
    (paragraph
      (text)
      (text))))

==================
Header with Special Characters
==================

== Header with #$%^&*() ==

---

(source_file
  (section)
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

===============================
Header at the End of Document
===============================

Some text.
== Header at End ==

------------------------------

(source_file
  (section
    (paragraph
      (text)))
  (section
    (heading2
      (heading_marker)
      (text)
      (heading_marker))))

================================================================================
Non-header line starting with = preserves inline constructs
================================================================================

==See [[Page]]=x

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (text)
      (text)
      (wikilink
        (wikilink_page
          (page_name_segment)))
      (text))))
